[build-system]
requires = [
  "setuptools>=69",
]
build-backend = "setuptools.build_meta"

[project]
name = "psel"
version = "0.1.0"
authors = [
  {
    name = "Eduard Yablonskyi",
    email = "eduard.yablonskyy@viapath.com",
  },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://gitlab.gtl.net/DevOps/samples/psel"
Issues = "https://gitlab.gtl.net/DevOps/samples/psel/-/issues"
