[build-system]
requires = [
  "setuptools-scm>=8",
  "setuptools>=69",
]
build-backend = "setuptools.build_meta"

[project]
name = "psel"
authors = [
  { name = "Eduard Yablonskyi", email = "eduard.yablonskyy@viapath.com" },
]
description = "A small example package"
dynamic = [
  "version",
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://gitlab.gtl.net/DevOps/samples/psel"
Issues = "https://gitlab.gtl.net/DevOps/samples/psel/-/issues"

[tool.setuptools_scm]
